Gallery scroll overflow fixed

--- a/src/features/Galleries/Galleries.scss
+++ b/src/features/Galleries/Galleries.scss
@@ -267,7 +267,9 @@
 			display: flex;
 			gap: 8px*3;
 			margin-bottom: 0px;
-			margin-left: 8px;
+			padding: 8px;
+			overflow-x: scroll;
+			overflow-y: auto;
 		}
 	}
 	
